[package]
name = "rocket-maud-diesel"
version = "0.1.0"
authors = ["TAHARA Yoshinori <read.eval.print@gmail.com>"]

[dependencies]
rocket = "0.2.8"
rocket_codegen = "0.2.8"
maud = { version = "0.16", features = ["rocket"] }
maud_macros = "0.16"
diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2 = "0.7"
r2d2-diesel = "0.13"
